--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,28 @@ body {
 
 /* HEADER */
 
+header {
+  height: 100%;
+}
+
 header div.container {
   position: fixed;
-  top: 0;
+  top: 0px;
   background-color: #f4f9fd;
   height: 100px;
   min-width: 1200px;
+  z-index: 999;
+}
+
+.container-2 {
+  margin-top: 100px;
+}
+
+.container-2,
+.container-3 {
+  width: 100%;
+  height: 200px;
+  background: brown;
 }
 
 /* NAVBAR FIXED */
