--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
   margin: auto;
 }
 
+.w-50 {
+  width: 50%;
+}
+
 .in-bl {
   display: inline-block;
 }
@@ -43,6 +47,18 @@ a {
   border: 1px solid black;
   border-radius: 7px;
   padding: 5px;
+}
+
+.btn-bigger {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.btn-orange {
+  background-color: #fe775a;
+  color: white;
 }
 
 body {
@@ -126,7 +142,16 @@ header .languages {
 }
 
 .menu-inline li a {
-  margin-left: 5px;
+  margin-left: 25px;
+}
+
+.jumbotron {
+  width: 100%;
+  height: 550px;
+  background-image: url(../img/jumbotron.png);
+  background-size: cover;
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 /* /NAVBAR STATIC */
