--- a/css/style.css
+++ b/css/style.css
@@ -317,13 +317,20 @@ header .languages {
 }
 
 .image-col {
-  width: 50%;
+  /* width: 50%; */
+  width: 200px;
+  height: 150px;
   margin: auto;
   padding-top: 20px;
+  text-align: center;
+}
+
+.image-col img {
+  height: 80%;
 }
 
 .title-col {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-bottom: 20px;
   text-align: center;
 }
