--- a/css/style.css
+++ b/css/style.css
@@ -376,10 +376,55 @@ header .languages {
 .box-2 {
   height: 800px;
   background-color: #00b1b1;
+  padding: 40px;
 }
 
 .community {
   height: 100%;
+}
+
+.text-community {
+  text-align: center;
+}
+
+.text-community p {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.row-community {
+  width: 100%;
+}
+
+.item {
+  position: relative;
+  width: 25%;
+  height: 200px;
+  border: 1px solid black;
+  color: white;
+}
+
+.content-item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.content-item h3 {
+  /* font-weight: 800; */
+  font-size: 250%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.content-item h3:after {
+  content: "\002B";
+  font-weight: lighter;
+}
+
+.content-item p {
+  font-size: 80%;
 }
 
 /* /BOX N°2 */
