--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@
   width: 100%;
 }
 
+.w-85 {
+  width: 85%;
+  margin: auto;
+}
+
 .w-70 {
   width: 70%;
   margin: auto;
@@ -442,5 +447,50 @@ header .languages {
 }
 
 /* /BOX N°2 */
+
+/* BOX N°3 */
+
+.box-3 {
+  height: 800px;
+  background-color: tomato;
+}
+
+.container-1 {
+  height: 300px;
+  background-color: yellowgreen;
+}
+
+.customers {
+  width: 20%;
+}
+
+.content-customers {
+  /* text-align: center; */
+}
+
+.title-customers {
+  font-size: 180%;
+  /* text-align: center; */
+}
+
+.text-customers {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.logos {
+  width: 80%;
+  text-align: center;
+}
+
+.row-images-logo {
+  width: 100%;
+}
+
+.logo-item img {
+  width: 100px;
+}
+
+/* /BOX N°3 */
 
 /* /MAIN */
