--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ header .languages {
 }
 
 .jumbotron {
+  position: relative;
   width: 100%;
   height: 550px;
   background-image: url(../img/jumbotron.png);
@@ -187,6 +188,18 @@ header .languages {
   background-position: 100% 100%;
   background-repeat: no-repeat;
   padding-top: 50px;
+}
+
+.jumbotron:after {
+  position: absolute;
+  bottom: 1px;
+  z-index: 20;
+  display: block;
+  content: "";
+  width: 100%;
+  background-color: #afebe4;
+  height: 90px;
+  border: 3px solid #384b5f;
 }
 
 .text-jumbotron {
