--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,8 @@ header .languages {
   width: 100%;
   background-color: #afebe4;
   height: 90px;
-  border: 3px solid #384b5f;
+  border-top: 4px solid #384b5f;
+  border-bottom: 4px solid #384b5f;
 }
 
 .text-jumbotron {
