--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ header .languages {
 
 .jumbotron {
   position: relative;
-  width: 100%;
+  width: 1500px;
   height: 550px;
   background-image: url(../img/jumbotron.png);
   background-size: cover;
